--- a/.github/workflows/sqlfluff-lint.yml
+++ b/.github/workflows/sqlfluff-lint.yml
@@ -1,28 +1,33 @@
-name: Auditoría NOLOCK con SQLFluff
+name: Auditoría SQL (NOLOCK)
 
 on:
   push:
-    branches: [main]
+    paths:
+      - 'auditSQL/**/*.sql'
+      - 'audit_nolock.py'
+      - '.github/workflows/sqlfluff-lint.yml'
   pull_request:
-    branches: [main]
+    paths:
+      - 'auditSQL/**/*.sql'
+      - 'audit_nolock.py'
+      - '.github/workflows/sqlfluff-lint.yml'
 
 jobs:
-  auditoria-nolock:
+  audit-nolock:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Clonar el repositorio
+      - name: 🧾 Clonar el repositorio
         uses: actions/checkout@v3
 
-      - name: Configurar Python
+      - name: 🐍 Configurar Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
-      - name: Instalar dependencias
+      - name: 🧰 Instalar dependencias
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Ejecutar script de auditoría personalizada
+          pip install -r requirements.txt || echo "sin requirements.txt"
+      
+      - name: 🔍 Ejecutar script de auditoría NOLOCK
         run: python audit_nolock.py
